make copy text smaller to prevent wrapping, #349

--- a/client/css/main.less
+++ b/client/css/main.less
@@ -174,7 +174,7 @@ input {
     #copy {
         display: block;
         text-align: center;
-        font-size: 12px;
+        font-size: 10px;
         background: none;
         color: lighten(@secondary-color, 16%);
         a {
